Definition of createWorkflow (v2)
