# plugins/orchestrator-common/api/openapi.yaml
@@ -79,6 +79,48 @@ paths:
                   message:
                     type: string
                     description: Error message
+    post:
+      operationId: createWorkflow
+      summary: Create or update a workflow
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                uri:
+                  type: string
+                body:
+                  type: string
+              required:
+                - uri
+      parameters:
+        - name: uri
+          in: query
+          description: URI parameter
+          schema:
+            type: string
+      responses:
+        '201':
+          description: Created
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  workflowItem:
+                    $ref: '#/components/schemas/WorkflowDTO'
+        '500':
+          description: Error fetching workflow list
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: Error message
   /v2/workflows/{workflowId}:
     get:
       operationId: getWorkflowById
